# ada-mcp-server

./: .als.json  .gitignore  ADA_MCP_SERVER_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  ada-mcp-server.code-workspace  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
scripts/: test_als_client.py  test_integration.py  test_phase1_integration.py  test_server_e2e.py
src/ada_mcp/: __init__.py  __main__.py  server.py
src/ada_mcp/als/: __init__.py  client.py  process.py  types.py
src/ada_mcp/tools/: __init__.py  build.py  diagnostics.py  navigation.py  project.py  refactoring.py  symbols.py
src/ada_mcp/utils/: __init__.py  cache.py  errors.py  position.py  uri.py
tests/: __init__.py  conftest.py  test_als_pool.py  test_als_process.py  test_build.py  test_cache.py  test_e2e.py  test_phase1_unit.py  test_project.py  test_refactoring.py  test_server.py
tests/fixtures/error_project/: error_project.gpr
tests/fixtures/error_project/src/: broken.adb
tests/fixtures/sample_project/: sample.gpr
tests/fixtures/sample_project/src/: main.adb  utils.adb  utils.ads
