[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ada-mcp-server"
version = "0.1.0"
description = "MCP server wrapping Ada Language Server for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ada MCP Contributors" }
]
keywords = ["ada", "mcp", "lsp", "language-server", "ai", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
ada-mcp = "ada_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ada-mcp/ada-mcp-server"
Documentation = "https://github.com/ada-mcp/ada-mcp-server#readme"
Repository = "https://github.com/ada-mcp/ada-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/ada_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
