[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ada-mcp-server"
dynamic = ["version"]
description = "MCP server wrapping Ada Language Server for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ada MCP Contributors" }
]
keywords = [
    "ada",
    "mcp",
    "model-context-protocol",
    "lsp",
    "language-server",
    "ai",
    "copilot",
    "github-copilot",
    "code-assistant",
    "gnat",
    "spark"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
ada-mcp = "ada_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ada-mcp/ada-mcp-server"
Documentation = "https://github.com/ada-mcp/ada-mcp-server#readme"
Repository = "https://github.com/ada-mcp/ada-mcp-server"
Issues = "https://github.com/ada-mcp/ada-mcp-server/issues"
Changelog = "https://github.com/ada-mcp/ada-mcp-server/releases"

[tool.hatch.version]
path = "src/ada_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ada_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude directories that shouldn't be analyzed
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
# Exclude venv and cache directories
exclude = [
    "^\\.venv/",
    "^venv/",
    "^__pycache__/",
]
